<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">stepcounter</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="demo">Acceleration Demo</string>
    <string name="xaxis">Maximum</string>
    <string name="yaxis">Minimum</string>
    <string name="zaxis">Average</string>
    <string name="step">Steps:</string>
    <string name="reset">Reset</string>
    <string name="plusb">+</string>
    <string name="minusb">-</string>

</resources>
