<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="20dip"
        android:text="@string/demo"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dip"
        android:stretchColumns="*" >

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/xaxis"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/yaxis"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/zaxis"
                android:textSize="14sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/x_axis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center" />

            <TextView
                android:id="@+id/y_axis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center" />

            <TextView
                android:id="@+id/z_axis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center" />
        </TableRow>

        <TableRow>
    
            <TextView
                android:id="@+id/x_axis_abs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:gravity="center"/>

            <TextView
                android:id="@+id/y_axis_abs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:gravity="center"/>

            <TextView
                android:id="@+id/z_axis_abs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:gravity="center"/>

        </TableRow>
        
                <TableRow>
    
            <TextView
                android:id="@+id/n1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/step" />

            <TextView
                android:id="@+id/lin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:gravity="center"/>

            <TextView
                android:id="@+id/n2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:gravity="center"/>

        </TableRow>

    </TableLayout>

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="10dip"
        android:visibility="invisible" 
        android:contentDescription=""/>

    <Button
        android:id="@+id/reset"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset" 
        android:onClick="resetSteps"/>

</LinearLayout>